objects/agf__ADM_Security_Questionaire__c.object
<CustomObject>
    <fields>
        <fullName>agf__Additional_Info__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <description>Any additional information you think is relevant.</description>
        <inlineHelpText>Any additional information you think is relevant.</inlineHelpText>
        <label>Additional Information</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Admin_enable__c</fullName>
        <description>Can the Org Admin enable/disable this feature?</description>
        <inlineHelpText>Can the Org Admin enable/disable this feature?</inlineHelpText>
        <label>Admin can enable/disable feature?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Availability_this_release__c</fullName>
        <description>Will the feature be GA, Pilot, or Other in the selected release?</description>
        <inlineHelpText>Will the feature be GA, Pilot, or Other in the selected release?</inlineHelpText>
        <label>Availability this release</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GA - General Availability</fullName>
                    <default>true</default>
                    <label>GA - General Availability</label>
                </value>
                <value>
                    <fullName>Pilot</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__BlackTab_enable__c</fullName>
        <description>Can the feature be enabled/disabled through BlackTab?</description>
        <inlineHelpText>Can the feature be enabled/disabled through BlackTab?</inlineHelpText>
        <label>BlackTab can enable/disable feature?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Bug_Template_to_Use__c</fullName>
        <description>You can specify a bug template you would like the security team to use.</description>
        <inlineHelpText>You can specify a bug template you would like the security team to use.</inlineHelpText>
        <label>Bug Template to Use</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>agf__Dev_Contact__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Dev contact for this feature.</description>
        <inlineHelpText>The Dev contact for this feature.</inlineHelpText>
        <label>Dev Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SecQ_Dev_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Doneness__c</fullName>
        <defaultValue>0</defaultValue>
        <description>How much of the feature testing for this team is done at the end of release</description>
        <inlineHelpText>How much of the feature testing for this team is done at the end of release</inlineHelpText>
        <label>Doneness %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>agf__Editions_available_in__c</fullName>
        <description>For which Editions will this feature be available?</description>
        <inlineHelpText>For which Editions will this feature be available?</inlineHelpText>
        <label>Editions available in:</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Developer</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Personal</fullName>
                </value>
                <value>
                    <fullName>Professional</fullName>
                </value>
                <value>
                    <fullName>Team</fullName>
                </value>
                <value>
                    <fullName>Unlimited</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Feature_Default_On__c</fullName>
        <description>Is this feature enabled by default?</description>
        <inlineHelpText>Is this feature enabled by default?</inlineHelpText>
        <label>Feature Default On?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Func_Spec__c</fullName>
        <description>Link to feature Functional Spec.</description>
        <inlineHelpText>Link to feature Functional Spec.</inlineHelpText>
        <label>Func Spec</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>agf__Link_to_test_env__c</fullName>
        <description>Link to test environment for security testing. (Optional)</description>
        <inlineHelpText>Link to test environment for security testing. (Optional)</inlineHelpText>
        <label>Link to test environment</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>agf__Mgmt_Contact__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Management contact for usability and functionality questions.</description>
        <inlineHelpText>The Management contact for usability and functionality questions.</inlineHelpText>
        <label>Management Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SecQ_Mgmt_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__P4_code_path__c</fullName>
        <description>The Perforce code path for this feature.</description>
        <inlineHelpText>The Perforce code path for this feature.</inlineHelpText>
        <label>Code Path in Perforce</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Primary_Reviewer__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Member of the Product Security Team to which this review is assigned.</description>
        <inlineHelpText>Member of the Product Security Team to which this review is assigned.</inlineHelpText>
        <label>Primary Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SecQ_Primary_Reviewer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__ProdSec_Product_Tag__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product tag for the ProdSec team that this security questionnaire is related to</description>
        <label>ProdSec Product Tag</label>
        <referenceTo>agf__ADM_Product_Tag__c</referenceTo>
        <relationshipLabel>Security Questionnaires</relationshipLabel>
        <relationshipName>Security_Questionnaires</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__QE_Contact__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The QE contact for this feature.</description>
        <inlineHelpText>The QE contact for this feature.</inlineHelpText>
        <label>QE Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SecQ_QE_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Reason__c</fullName>
        <description>Reason for Doneness &lt; 100%</description>
        <inlineHelpText>Reason for Doneness &lt; 100%</inlineHelpText>
        <label>Reason for Doneness &lt; 100%</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low risk feature</fullName>
                </value>
                <value>
                    <fullName>Feature unavailable for testing</fullName>
                </value>
                <value>
                    <fullName>Inadequate bandwidth</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Reviewer_Notes__c</fullName>
        <description>Reviewer Notes.</description>
        <inlineHelpText>Reviewer Notes.</inlineHelpText>
        <label>Reviewer Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Scheduled_Build__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Scheduled Build.</description>
        <inlineHelpText>Scheduled Build.</inlineHelpText>
        <label>Release</label>
        <referenceTo>agf__ADM_Build__c</referenceTo>
        <relationshipLabel>Security Questionnaires</relationshipLabel>
        <relationshipName>SecQ_Scheduled_Build</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Scrum_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Scrum Team that is building this feature.</description>
        <inlineHelpText>The Scrum Team that is building this feature.</inlineHelpText>
        <label>Product Scrum Team</label>
        <referenceTo>agf__ADM_Scrum_Team__c</referenceTo>
        <relationshipLabel>Security Questionnaires</relationshipLabel>
        <relationshipName>SecQ_Scrum_Team</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Secondary_Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Member of the Product Security Team to which this review is assigned.</description>
        <inlineHelpText>Member of the Product Security Team to which this review is assigned.</inlineHelpText>
        <label>Secondary Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Security_Secondary_Reviewer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Security_User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The associated security user story for the team</description>
        <inlineHelpText>The associated security user story for the team</inlineHelpText>
        <label>Security User Story</label>
        <referenceTo>agf__ADM_Work__c</referenceTo>
        <relationshipLabel>Security Questionnaires</relationshipLabel>
        <relationshipName>Security_Questionnaires</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Short_description_of_the_feature__c</fullName>
        <description>Provide a short description of the feature or initiative.</description>
        <inlineHelpText>Provide a short description of the feature or initiative.</inlineHelpText>
        <label>Short description of the feature</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Status__c</fullName>
        <description>Status.</description>
        <inlineHelpText>Status.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Ready for Review</fullName>
                </value>
                <value>
                    <fullName>Review In Progress</fullName>
                </value>
                <value>
                    <fullName>Review Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Tech_Spec__c</fullName>
        <description>Link to feature Technical Spec.</description>
        <inlineHelpText>Link to feature Technical Spec.</inlineHelpText>
        <label>Tech Spec</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>agf__Test_Password__c</fullName>
        <complianceGroup>PCI</complianceGroup>
        <description>Password for test account. (Optional)</description>
        <inlineHelpText>Password for test account. (Optional)</inlineHelpText>
        <label>Test Password</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Test_Username__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <description>Username to be used for testing. (Optional)</description>
        <inlineHelpText>Username to be used for testing. (Optional)</inlineHelpText>
        <label>Test Username</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <label>Security Questionnaire</label>
    <listViews>
        <fullName>agf__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Questionnaire Feature Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Security Questionnaires</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>